tests/src/frontend/typechecking/invalid/assign2.sk
mutable class Foo(mutable x: Int)

fun bar(): void {
  f = mutable Foo(1);
  f.!x = 2;
  !f = Foo(0)
}
